Fix cramped topbar on smaller screens

--- a/src/components/Topbar/index.scss
+++ b/src/components/Topbar/index.scss
@@ -18,7 +18,7 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        width: 20%;
+        width: 50%;
 
         &__profile {
             display: flex;
